--- a/Aula 10 - Desenvolvimento Web 1/Atividade 10/css/estilo.css
+++ b/Aula 10 - Desenvolvimento Web 1/Atividade 10/css/estilo.css
@@ -1,7 +1,7 @@
 *{margin: 0; padding: 0}
 
 body{
-    background: #e6e3e3;
+    background: #FFF;
     font-size: 14px;
 }
 
@@ -11,6 +11,40 @@ body{
     /*padding: 20px 0;*/
     background: #BBBBBB;
    /*position: relative;*/
+}
+
+#acessibilidade{
+    width: 100%;
+    height: auto;
+    background-color: #BBBBBB;
+    margin: auto;
+}
+
+#atalhos{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    list-style: none;
+    padding-left: 2%;
+}
+
+#atalhos li{
+    display: inline;
+}
+
+#atalhos li a{
+    color: #000;
+}
+
+#atalhos li a:hover{
+    color: 3e3e3e;
+}
+
+#pgacess{
+    padding-left: 30%;
+}
+
+.contraste, .fonte{
+    padding-left: 5px;
 }
 
 #logo{
@@ -82,6 +116,7 @@ float: left;
 h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    padding-top: 3%;
 }
 
 h2{
@@ -111,10 +146,24 @@ h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 3%;
 }
+
+.center{
+    text-align: center;
+    padding-top: 1%;
+}
+
 
 section{
     padding: 3%;
+    
+}
+iframe{
+    width: 560px;
+    height: 315px;
+    
+   
 }
 
 
@@ -124,7 +173,7 @@ section{
     text-align: center;
 }
 
-.rodape{
+#rodape{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
     color: #fff;
