--- a/Aula 11 - Desenvolvimento Web 1/Atividade 11/css/estilo.css
+++ b/Aula 11 - Desenvolvimento Web 1/Atividade 11/css/estilo.css
@@ -1,7 +1,7 @@
 *{margin: 0; padding: 0}
 
 body{
-    background: #e6e3e3;
+    background: #FFF;
     font-size: 14px;
 }
 
@@ -11,6 +11,40 @@ body{
     /*padding: 20px 0;*/
     background: #BBBBBB;
    /*position: relative;*/
+}
+
+#acessibilidade{
+    width: 100%;
+    height: auto;
+    background-color: #BBBBBB;
+    margin: auto;
+}
+
+#atalhos{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    list-style: none;
+    padding-left: 2%;
+}
+
+#atalhos li{
+    display: inline;
+}
+
+#atalhos li a{
+    color: #000;
+}
+
+#atalhos li a:hover{
+    color: 3e3e3e;
+}
+
+#pgacess{
+    padding-left: 30%;
+}
+
+.contraste, .fonte{
+    padding-left: 5px;
 }
 
 #logo{
@@ -72,6 +106,15 @@ float: left;
     width: 150px;
 }
 
+/*menu responsivo*/
+label[for="bt_menu"]{
+    display: none;
+}
+
+#bt_menu{
+    display: none; /*Oculta o checkbox do menu*/
+}
+
 
 .navegacao-a {
     color: white;
@@ -82,6 +125,7 @@ float: left;
 h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    padding-top: 3%;
 }
 
 h2{
@@ -111,10 +155,24 @@ h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 3%;
 }
+
+.center{
+    text-align: center;
+    padding-top: 1%;
+}
+
 
 section{
     padding: 3%;
+    
+}
+iframe{
+    width: 560px;
+    height: 315px;
+    
+   
 }
 
 
@@ -124,7 +182,7 @@ section{
     text-align: center;
 }
 
-.rodape{
+#rodape{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
     color: #fff;
@@ -193,3 +251,117 @@ input[type=reset]{
     color: red;
 
 } /*pseudo classe after acrescenta elementos depois da classe*/
+
+.breadcrumb{
+    padding-left: 2%;
+    list-style: none; /*tira os marcadores da lista não ordenada*/
+
+}
+
+.breadcrumb li{
+    display: inline;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 0.7em;
+    color: #000;
+}
+
+.breadcrumb li a{
+    color: #3e3e3e;
+    text-decoration: none; /*tira o sublinhado do link*/
+
+}
+
+.breadcrumb li+li:before{
+    content: "/\00a0"; /*código ansi para adicionar uma / no breadcrumb*/
+    padding: 6px;
+    color: #000;
+}
+
+.breadcrumb li a:hover{
+    color: #000;
+    text-decoration: underline;
+
+}
+
+/*media queries*/
+
+/*Media querie menu responsivo*/
+
+@media screen and (max-width:630px){
+    #menu{
+        display: none;
+    }
+    label[for="bt_menu"]{
+        display: block;
+    }
+    #bt_menu:checked~ #menu{
+        display: block;
+        border: none;
+    }
+    #menu li{
+        position: relative;
+        float: left;
+        width: 100%;
+        border: none;
+    }
+
+    #menu li ul{
+        position: static;
+        width: 100%;
+        float: left;
+        border: none;
+    }
+
+    #menu li ul li{
+        position: relative;
+        width: 100%;
+        float: left;
+        display: block;
+        border: none;
+
+    }
+}
+
+/*media queries*/
+/*Acessibilidade*/
+
+@media screen and (max-width: 1440px) {
+
+    #pgacess{
+        padding-left: 30%;
+    }
+    .contraste, .fonte{
+        padding-left: 5px;
+    }
+
+}
+
+@media screen and (max-width:1280px) {
+    #pgacess{
+        padding-left: 20%;
+    }
+    
+}
+@media screen and (max-width: 1024px){
+    #pgacess{
+        padding: 15%;
+    }
+}
+
+
+
+/*@media screen and (max:width:630px){
+     #atalhos li{
+        display: none;
+    }
+    ul #atalhos li #pgacess{
+        padding-left: 2%;
+        display: inline-block;
+    }
+    ul #atalhos li .contraste{
+        display: inline-block;
+    }
+    #atalhos li .fonte{
+        display: inline-block;
+    }
+}*/
